--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ pandas == 1.0.5
 numpy == 1.19.2
 nltk == 3.4.4
 scikit-learn == 0.23.1
+seaborn == 0.10.1
+plotly == 4.5.3
+matplotlib == 3.3.0
+Pillow == 7.2.0
