--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit == 0.70.0  
+streamlit == 0.70.0 
+scipy==1.4.1
 plotly == 4.5.3
 altair == 4.1.0
 spacy == 2.3.2
 pandas == 1.0.5
-numpy == 1.19.2
+numpy == 1.19.0
 nltk == 3.4.4
 scikit-learn == 0.23.1
 seaborn == 0.10.1
