--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ plotly == 4.5.3
 altair == 4.1.0
 spacy == 2.3.2
 pandas == 1.0.5
-numpy >=1.16.0
+numpy == 1.16.0
 nltk == 3.4.4
 scikit-learn == 0.23.1
 seaborn == 0.10.1
